--- a/wampspring-demo-simple/pom.xml
+++ b/wampspring-demo-simple/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>wampspring-ch.rasc.wampspring.demo.simple</name>
+	<name>wampspring-demo-simple</name>
 	<description>Demo project for Spring Boot and wampspring</description>
 
 	<parent>
