--- a/wampspring-demo-various/pom.xml
+++ b/wampspring-demo-various/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>wampspring-ch.rasc.wampspring.demo.various</name>
+	<name>wampspring-demo-various</name>
 	<description>Various demos for Spring Boot and wampspring</description>
 
 	<parent>
