--- a/wampspring-demo-security/pom.xml
+++ b/wampspring-demo-security/pom.xml
@@ -84,6 +84,16 @@
 			<artifactId>wampspring</artifactId>
 			<version>1.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.rasc</groupId>
+			<artifactId>wampspring-session</artifactId>
+			<version>1.1.0-SNAPSHOT</version>
+		</dependency>		
+		<dependency>
+			<groupId>ch.rasc</groupId>
+			<artifactId>wampspring-security</artifactId>
+			<version>1.1.0-SNAPSHOT</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
