--- a/wampspring-demo-client/server/pom.xml
+++ b/wampspring-demo-client/server/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ch.rasc.wampspring</groupId>
-	<artifactId>wampspring-demo-client</artifactId>
+	<artifactId>wampspring-demo-client-server</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>wampspring-demo-client</name>
-	<description>Demo project for Spring Boot and wampspring</description>
+	<name>wampspring-demo-client-server</name>
+	<description>Server part of the client/server sample application</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -25,24 +25,6 @@
 	</properties>
 
 	<repositories>
-		<repository>
-			<id>spring-snapshots</id>
-			<name>Spring Snapshots</name>
-			<url>http://repo.spring.io/snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>http://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-
 		<repository>
 			<id>sonatype</id>
 			<name>sonatype</name>
@@ -66,16 +48,6 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.projectreactor.spring</groupId>
-			<artifactId>reactor-spring-core</artifactId>
-			<version>2.0.0.M2</version>
-		</dependency>
-		<dependency>
-			<groupId>io.projectreactor.spring</groupId>
-			<artifactId>reactor-spring-context</artifactId>
-			<version>2.0.0.M2</version>
-		</dependency>
-		<dependency>
 			<groupId>ch.rasc</groupId>
 			<artifactId>wampspring</artifactId>
 			<version>1.1.0-SNAPSHOT</version>
@@ -88,6 +60,40 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<plugin>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<header>${basedir}/../../header.txt</header>
+					<properties>
+						<owner>Ralph Schaer</owner>
+						<year>2015</year>
+						<currentYear>2015</currentYear>
+						<email>ralphschaer@gmail.com</email>
+					</properties>
+					<excludes>
+						<exclude>**/*.xml</exclude>
+						<exclude>**/*.txt</exclude>
+						<exclude>**/*.md</exclude>
+						<exclude>**/*.json</exclude>
+						<exclude>**/*.py</exclude>
+						<exclude>**/*.yml</exclude>
+						<exclude>**/.gitignore</exclude>
+					</excludes>
+					<strictCheck>true</strictCheck>
+				</configuration>
+				<executions>
+					<execution>
+						<id>check-headers</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>				
 		</plugins>
 	</build>
 
