--- a/wampspring-demo-security/src/main/resources/application.properties
+++ b/wampspring-demo-security/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.thymeleaf.cache=false
-spring.template.cache=false
+#spring.thymeleaf.cache=false
+#spring.template.cache=false
 
 spring.datasource.url=jdbc:h2:file:./testdb
 spring.datasource.username=sa
