--- a/wampspring-demo-various/src/main/resources/application.properties
+++ b/wampspring-demo-various/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.resources.cache-period=
 bandwidth.network.interface=eth0
-
-geoip2.cityfile=e:/temp/GeoLite2-City.mmdb
-access.logs=e:/temp/access.log
-
+geoip2.cityfile=/opt/demos_tc8/GeoLite2-City.mmdb
+access.logs=/var/log/nginx/access.log
