--- a/wampspring-demo-webrtc/pom.xml
+++ b/wampspring-demo-webrtc/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>ch.rasc.wampspring</groupId>
 	<artifactId>wampspring-demo-webrtc</artifactId>
 	<version>0.0.1</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>wampspring-demo-webrtc</name>
 	<description>Chat with WebRTC</description>
