--- a/wampspring-demo-simple/pom.xml
+++ b/wampspring-demo-simple/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>ch.rasc</groupId>
 			<artifactId>wampspring</artifactId>
-			<version>1.1.0</version>
+			<version>1.1.1-SNAPSHOT</version>
 		</dependency>		
 	</dependencies>
 
