--- a/wampspring-demo-webrtc/pom.xml
+++ b/wampspring-demo-webrtc/pom.xml
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>ch.rasc</groupId>
 			<artifactId>wampspring</artifactId>
-			<version>1.1.0</version>
+			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.uadetector</groupId>
