Use new travis build system

--- a/wampspring-demo-various/pom.xml
+++ b/wampspring-demo-various/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.2.5.RELEASE</version>
+		<version>1.3.0.M5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -22,10 +22,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>ch.rasc.wampspring.demo.various.Application</start-class>
 		<java.version>1.8</java.version>
-		<spring.version>4.1.7.RELEASE</spring.version>
+		<spring.version>4.2.1.RELEASE</spring.version>
 	</properties>
 
-		<repositories>
+	<repositories>
 		<repository>
 			<id>sonatype</id>
 			<name>sonatype</name>
@@ -37,20 +37,38 @@
 				<enabled>true</enabled>
 			</releases>
 		</repository>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
-	
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
@@ -81,7 +99,7 @@
 		<dependency>
 			<groupId>com.maxmind.geoip2</groupId>
 			<artifactId>geoip2</artifactId>
-			<version>2.3.0</version>
+			<version>2.3.1</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>google-http-client</artifactId>
