--- a/wampspring-demo-client/client/pom.xml
+++ b/wampspring-demo-client/client/pom.xml
@@ -73,6 +73,8 @@
 						<exclude>**/*.py</exclude>
 						<exclude>**/*.yml</exclude>
 						<exclude>**/.gitignore</exclude>
+						<exclude>.mvn/**/*</exclude>
+						<exclude>mvnw.cmd</exclude>						
 					</excludes>
 					<strictCheck>true</strictCheck>
 				</configuration>
