--- a/wampspring-demo-security/pom.xml
+++ b/wampspring-demo-security/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.3.RELEASE</version>
+		<version>1.3.5.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -98,7 +98,7 @@
 		<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session</artifactId>
-			<version>1.0.2.RELEASE</version>
+			<version>1.2.0.RC2</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.rasc</groupId>
