--- a/wampspring-demo-various/pom.xml
+++ b/wampspring-demo-various/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.0.RELEASE</version>
+		<version>1.4.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -22,7 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>ch.rasc.wampspring.demo.various.Application</start-class>
 		<java.version>1.8</java.version>
-		<spring.version>4.3.2.RELEASE</spring.version>
+		<spring.version>4.3.4.RELEASE</spring.version>
 	</properties>
 
 	<repositories>
@@ -81,7 +81,7 @@
 		<dependency>
 			<groupId>com.maxmind.geoip2</groupId>
 			<artifactId>geoip2</artifactId>
-			<version>2.8.0-rc1</version>
+			<version>2.8.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>httpclient</artifactId>
