--- a/wampspring-demo-client/server/pom.xml
+++ b/wampspring-demo-client/server/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.0.RELEASE</version>
+		<version>1.4.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -64,7 +64,7 @@
 			<plugin>
 				<groupId>com.mycila</groupId>
 				<artifactId>license-maven-plugin</artifactId>
-				<version>3.0.rc1</version>
+				<version>3.0</version>
 				<configuration>
 					<header>${basedir}/../../header.txt</header>
 					<properties>
