--- a/wampspring-demo-client/client/pom.xml
+++ b/wampspring-demo-client/client/pom.xml
@@ -16,7 +16,7 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-framework-bom</artifactId>
-				<version>4.3.9.RELEASE</version>
+				<version>4.3.10.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -59,11 +59,12 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
+				<version>3.6.2</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
 					<encoding>UTF-8</encoding>
+					<parameters>true</parameters>
 				</configuration>
 			</plugin>
 
