Exclude mvn from license check

--- a/wampspring-demo-client/server/pom.xml
+++ b/wampspring-demo-client/server/pom.xml
@@ -82,7 +82,8 @@
 						<exclude>**/*.yml</exclude>
 						<exclude>**/.gitignore</exclude>
 						<exclude>.mvn/**/*</exclude>
-						<exclude>mvnw.cmd</exclude>						
+						<exclude>mvnw.cmd</exclude>
+						<exclude>mvnw</exclude>
 					</excludes>
 					<strictCheck>true</strictCheck>
 				</configuration>
