--- a/wampspring-demo-client/client/pom.xml
+++ b/wampspring-demo-client/client/pom.xml
@@ -23,19 +23,6 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<repositories>
-			<repository>
-				<id>sonatype</id>
-				<name>sonatype</name>
-				<url>https://oss.sonatype.org/content/groups/public</url>
-				<snapshots>
-					<enabled>true</enabled>
-				</snapshots>
-				<releases>
-					<enabled>true</enabled>
-				</releases>
-			</repository>	
-	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -50,7 +37,7 @@
 		<dependency>
 			<groupId>ch.rasc</groupId>
 			<artifactId>wampspring</artifactId>
-			<version>1.1.2-SNAPSHOT</version>
+			<version>1.1.2</version>
 		</dependency>
 	</dependencies>
 
